<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="104dp"
        android:orientation="vertical" >
        
        <TextView 
            android:id="@+id/model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="36sp"
            android:text="@string/model"/>
        
        <TextView 
            android:id="@+id/Android_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="36sp"
            android:text="@string/android_version"/>
        
        <TextView 
            android:id="@+id/running"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="36sp"
            android:text="@string/running"/>
        
        <TextView 
            android:id="@+id/inner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="36sp"
            android:text="@string/inner"/>
        
        <TextView 
            android:id="@+id/firware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="36sp"
            android:text="@string/firware"/>
        
        <TextView 
            android:id="@+id/kernel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="36sp"
            android:text="@string/kernel"/>
        
        <TextView 
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="36sp"
            android:text="@string/version"/>
        
    </LinearLayout>
    </LinearLayout>
    
</ScrollView>